fixed issue with background on character create overlapping various inputs

--- a/src/style/_backgrounds.scss
+++ b/src/style/_backgrounds.scss
@@ -30,7 +30,7 @@
 }
 
 .fields-background {
-  @include image-background-mixin('../assets/images/windmill-road.png', bottom right);
+  @include image-background-mixin('../assets/images/windmill-road.png', top right);
 }
 
 .castle-ruins-background {
